# Pipelines

./: Dockerfile  TODO.md  pyproject.toml
dagster-project/: README.txt  pyproject.toml
dagster-project/dagster_project/: rundagster.py
example_pipeline/: db.db  norm.csv
pipelines/: cli.py  datawork.py  tasks.py
pipelines/original/: original.csv
prefect-project/: pyproject.toml
prefect-project/prefect_project/: runprefect.py
prefect-project/prefect_project/DATA/: result2.csv
