[tool.poetry]
name = "dagster-project"
version = "0.1.0"
description = ""
authors = ["Dron350zzek <dron350zek@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_project"}]

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.2.3"
pandas = "^1.5.3"
dagit = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
