[tool.poetry]
name = "prefect-project"
version = "0.1.0"
description = ""
authors = ["Dron350zzek <dron350zek@gmail.com>"]
readme = "README.md"
packages = [{include = "prefect_project"}]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.8.7"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
